<resources>
    <string name="app_name">Taskly</string>
    <string name="title_activity_user_tutorial">user_tutorial</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_task_screen">taskScreen</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="reflection_drafts">Reflection Drafts</string>
    <string name="published">Published</string>
    <string name="reflection_entries">Reflection Entries</string>
    <string name="drafts">Drafts</string>
    <string name="back_to_entries">Back to Entries</string>
    <string name="new_passcode">New Passcode</string>
    <string name="skip_passcode">Skip Passcode</string>
    <string name="reset_passcode">Reset Passcode</string>
    <string name="cancel_reset">Cancel Reset</string>
    <string name="remove_pin">Remove Pin</string>
    <string name="cancel_removal">Cancel Removal</string>
    <string name="verify_and_remove">Verify and Remove</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="recover_passcode">Recover Passcode</string>
    <string name="please_confirm_pin">Please confirm pin</string>
    <string name="please_enter_your_pin">Please Enter Your Pin</string>
    <string name="future">Future</string>
    <string name="past">Past</string>
    <string name="present">Present</string>
    <string name="diary">Diary</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="saturday">SATURDAY</string>
    <string name="limit_0">Limit: 0 / ∞</string>
    <string name="generic_task_text">Generic Task Text</string>
    <string name="week_span_text">Week Span Text</string>
    <string name="add">Add</string>
    <string name="default_name_date">Default Name: Date</string>
    <string name="click_here_to_start_and_type_your_entry_default_text_will_disappear_when_you_start_typing">Click here to start and type your entry, default text will disappear when you start typing...</string>
    <string name="discard">Discard</string>
    <string name="publish">Publish</string>
    <string name="recover_passocde">Recover Passocde</string>
    <string name="submit_pin">Submit Pin</string>
    <string name="retry_with_new_pin">Retry with New Pin</string>
    <string name="please_enter_recovery_email">Please Enter Recovery Email</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="reset_email">Reset Email</string>
    <string name="set_task_limits">Set Task Limits</string>
    <string name="clear_data">Clear Data</string>
    <string name="first_section">First Section</string>
    <string name="second_section">Second Section</string>
    <string name="third_section">Third Section</string>
    <string name="set_limits">Set Limits</string>
    <string name="cancel">Cancel</string>
    <string name="start_planning">Start Planning</string>
    <string name="name_of_task">Name of Task...</string>
    <string name="add_task">Add Task</string>
    <string name="cancel_task">Cancel Task</string>

    <string-array name="Sections">
        <item>First Section</item>
        <item>Second Section</item>
        <item>Third Section</item>
    </string-array>

    <string-array name="TimeIncrements">
        <item>Months</item>
        <item>Weeks</item>
        <item>Years</item>
    </string-array>

    <string-array name="TimeLimits">
        <item>1 Task</item>
        <item>2 Tasks</item>
        <item>3 Tasks</item>
        <item>4 Tasks</item>
        <item>5 Tasks</item>
    </string-array>

</resources>