<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDiaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/nightPurple"
                android:drawableEnd="@drawable/pen"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="@font/quicksand_variablefont_wght"
                android:hint="@string/default_name_date"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/entryText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:layout_margin="5dp"
                android:gravity="center|top"
                android:padding="10dp"
                android:background="@color/nightPurple"
                android:textColor="@color/white"
                android:ems="10"
                android:inputType="textMultiLine"
                android:fontFamily="@font/quicksand_variablefont_wght"
                android:textStyle="bold"
                android:hint="@string/click_here_to_start_and_type_your_entry_default_text_will_disappear_when_you_start_typing"
                android:textColorHint="@color/white"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:backgroundTint="@color/sunsetPurple"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/discard"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/sunsetPurple"
                    android:fontFamily="@font/cormorantgaramond_regular"
                    android:text="@string/discard"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/publish"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/sunsetPurple"
                    android:fontFamily="@font/cormorantgaramond_regular"
                    android:text="@string/publish"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>