<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/entryType"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/nightPurple"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:fontFamily="@font/quicksand_variablefont_wght"
                android:textStyle="bold"
                android:text="@string/reflection_entries" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/diaryRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:layout_margin="5dp"
                android:background="@color/nightPurple"
                android:layout_weight="8">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:backgroundTint="@color/sunsetPurple"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/drafts"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/sunsetPurple"
                    android:fontFamily="@font/cormorantgaramond_regular"
                    android:text="@string/drafts"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/add"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/sunsetPurple"
                    android:fontFamily="@font/cormorantgaramond_regular"
                    android:text="@string/add"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>